2007-03-19  Mike Kestner  <mkestner@novell.com>

	* ListView.cs : make box selection for Details views without 
	FullRowSelect dependent on the text bounds, not item bounds.
	* ListViewItem.cs : add an internal property to obtain the TextBounds
	in Details view.  [Fixes case 1-4 of #80374]

2007-03-19  Andreia Gaita  <avidigal@novell.com>

	* PaintEventArgs.cs (Dispose): Only dispose of graphics object if
	we're < 2.0. #78448 && #80316

2007-03-19  Jonathan Pobst  <monkey@jpobst.com>

	* FontDialog.cs: Don't crash when we switch to a new font that doesn't
	have the same style available as the previously selected one.  Also,
	support FixedPitchOnly property.  [Fixes bugs #80918, #80947]

2007-03-19  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Add an alignment property that all new lines
	will be given.
	- Make sure to use the align shift when calculating the line's X
	position.
	* TextBox.cs: Set the alignment on the document as well as on all
	the document lines.

2007-03-19  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Control.cs: ControlCollection.Add: Remove a couple of duplicated casts and
	  throw if setting the parent of an mdichild that already has an
	  mdiparent. Update signature for 2.0 profile. ProductName: If there's no
	  AssemblyProductAttribute in the assembly, use the type's namespace (as
	  MS seems to do). CreateControl: don't create the handle if the control
	  is not visible (according to MS behaviour and spec).  SetTopLevel: Only
	  create handle if the control is not a form. Change FocusInternal to
	  virtual so that it can be overriden by Form.
	* TextBox.cs: Update call to FocusInternal.
	* Form.cs: Always create the handle when calling Focus on a MdiChild. The
	  form is not a toplevel form when it's a mdi child, so update is_toplevel
	  accordingly. ShowIcon/TransparencyKey: avoid creating the handle if it
	  hasn't been created. Show (IWin32Window): Don't allow this overload for